--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -115,7 +115,8 @@ fieldset{
 }
 /*** ZONA TERZIARIA ***/
 #zona_terziaria{
-    position:fixed;
+    position: -webkit-sticky;
+    position: sticky;
     bottom:0;
     height:50px;
     background-color:#00FF90;
