--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -10,8 +10,8 @@
     box-sizing: border-box;
 }
 
-body #iscriviti-ora{
-    background.color:#15172b;
+body {
+    background-color:#15172b;
 }
 
 h1{
